# Kalculator

./: .gitignore  .vimspector.json  CMakeLists.txt  Cargo.toml  README.md  calc  compile_commands.json  lexer.cpp  lexer.h  main.cpp  now  token.cpp  token.h  tokens.cpp  tokens.h
src/: app.rs  lexer.cpp  lexer.h  main.cpp  main.rs  parsing.rs  token.cpp  token.h
